--- a/bin/BuildFile.j2
+++ b/bin/BuildFile.j2
@@ -105,6 +105,10 @@
   <flags   LDFLAGS="-lCore -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lTree -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lz -pthread -lm -ldl -rdynamic" CXXFLAGS="-Wno-error=maybe-uninitialized" />
 </bin>
 
+<bin name="RatioPlot" file="RatioPlot.cc">
+  <flags   LDFLAGS="-lCore -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lTree -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lz -pthread -lm -ldl -rdynamic" CXXFLAGS="-Wno-error=maybe-uninitialized" />
+</bin>
+
 
 {% for name in names %}
 <bin name="{{ name }}" file="_tmp/src/{{ name }}.cc">
