--- a/bin/BuildFile.j2
+++ b/bin/BuildFile.j2
@@ -110,6 +110,11 @@
 </bin>
 
 
+<bin name="FitBackground" file="FitBackground.cc">
+  <flags   LDFLAGS="-lCore -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lTree -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lz -pthread -lm -ldl -rdynamic" CXXFLAGS="-Wno-error=maybe-uninitialized" />
+</bin>
+
+
 {% for name in names %}
 <bin name="{{ name }}" file="_tmp/src/{{ name }}.cc">
   <use name="JetMETCorrections/Modules" />
