--- a/bin/AnalysisJetsSmrBTagRegFSRMatch.j2
+++ b/bin/AnalysisJetsSmrBTagRegFSRMatch.j2
@@ -79,6 +79,8 @@ const Float_t b_tagging_efficiency = 0.99;
 const Int_t kTight = 2;
 const array<Float_t, 3> pt_cut_had{ {100, 100, 40} };
 const array<Float_t, 3> pt_cut_lep{ {40, 40, 30} };
+const Float_t veto_fourth_jet_lep = 30;
+const Float_t veto_fourth_jet_chr = 40;
 const array<Float_t, 3> eta_cut{ {2.2, 2.2, 2.2} };
 const Float_t lepton_in_jet_pt_cut = 12;
 const bool debug = false;
@@ -885,6 +887,28 @@ void DataContainer::fill_histogram(TTree* tree, \
       cout << "This event is marked as leptonic: " << leptonic \
            << " now i check for real pt cut" << endl;
     }
+
+    {
+      if (corrected_jet.size() > 3) {
+        Float_t right_veto = leptonic ? veto_fourth_jet_lep : veto_fourth_jet_chr;
+        if (debug) {
+          cout << "Checking for veto. Fourth jet has pt: " << corrected_jet[3].Pt() << endl;
+          cout << "This event is leptonic? " << leptonic << "\t so the right_veto is: " \
+               << right_veto << endl;
+        }
+        if (corrected_jet[3].Pt() > right_veto) {
+          if (debug) {
+            cout << "Skipping for fourth jet veto" << endl;
+          }
+          continue;
+        }
+      } else {
+        if (debug) {
+          cout << "Not checking fourth jet veto because there is no fourth jet" << endl;
+        }
+      }
+    }
+
     Bool_t successs = true;
     for (UInt_t i = 0; i < 2; i++) {
       if (bjets[i].Pt() < right_pt_cut(leptonic, i)) {
