Improvement to script for combine

--- a/bin/script/combine/templates/combine_script.j2
+++ b/bin/script/combine/templates/combine_script.j2
@@ -14,5 +14,6 @@ cd {{ out_dir }}/{{ l }}/{{ c }}
 PlotLimit -i HbbLimits -M sigmaBR
 cp HbbLimits.pdf {{ out_dir }}/{{ l }}/{{ c }}.pdf
 cp HbbLimits.png {{ out_dir }}/{{ l }}/{{ c }}.png
+cp HbbLimits.txt {{ out_dir }}/{{ l }}/{{ c }}.txt
 {% endfor %}
 {% endfor %}
