--- a/bin/BuildFile.j2
+++ b/bin/BuildFile.j2
@@ -122,6 +122,11 @@
 </bin>
 
 
+<bin name="AddNormalizationToFile" file="AddNormalizationToFile.cc">
+  <flags   LDFLAGS="-lCore -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lTree -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lz -pthread -lm -ldl -rdynamic" CXXFLAGS="-Wno-error=maybe-uninitialized" />
+</bin>
+
+
 
 
 {% for name in names %}
