--- a/bin/BuildFile.j2
+++ b/bin/BuildFile.j2
@@ -121,8 +121,9 @@
   <flags   LDFLAGS="-lCore -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lTree -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lz -pthread -lm -ldl -rdynamic" CXXFLAGS="-Wno-error=maybe-uninitialized" />
 </bin>
 
-
-
+<bin name="PlotShapes" file="PlotShapes.cc">
+  <flags   LDFLAGS="-lCore -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lTree -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lz -pthread -lm -ldl -rdynamic" CXXFLAGS="-Wno-error=maybe-uninitialized" />
+</bin>
 
 {% for name in names %}
 <bin name="{{ name }}" file="_tmp/src/{{ name }}.cc">
